updated so it could run with jprofiler